[package]
name = "wasm-audio"
version = "0.1.0"
authors = ["Akihito KIRISAKI <kirisaki@klaraworks.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3.35"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[lib]
crate-type = ["cdylib"]
